2007-03-15  Naba Kumar  <naba@gnome.org>

	* libanjuta/anjuta-profile-manager.c,
	libanjuta/anjuta-profile-manager.h: Added method to get current
	profile.

	* libanjuta/anjuta-shell.c, libanjuta/anjuta-shell.h: Added "exiting"
	signal and anjuta_shell_notify_exit(). Signal is emitted when anjuta
	is exiting.

	* libanjuta/anjuta-utils.c, libanjuta/anjuta-utils.h,
	plugins/file-loader/plugin.c: Moved to functions as utility functions.
	Also, not load project files in session load in loader plugin.
	
	* plugins/project-manager/plugin.c, src/anjuta.c:
	Emit "exiting" signal in shell when exiting anjuta. project manager
	listens to exiting signal and saves session. anjuta.c saves session
	only when current projfile is 'user'. Load project saved in session
	differently then the rest of the session. This should fix all the
	session restoration bugs.
	
	src/main.c: Present anjuta window when becon message is received.

2007-03-14  Naba Kumar  <naba@gnome.org>

	* libanjuta/anjuta-profile.c: Fixed a bug where some plugins would
	not randomly save (it was a wrong looping).
	
2007-03-12  Naba Kumar  <naba@gnome.org>

	* libanjuta/interfaces/libanjuta.idl: Added more API section headers.

2007-03-12 Sebastien Granjoux <seb.sfo@free.fr>

	* plugins/debug-manager/anjuta-debug-manager.ui,
	libanjuta/interfaces/libanjuta.idl,
	plugins/debug-manager/debugger.c,
	(added) plugins/debug-manager/threads.c,
	(added) plugins/debug-manager/threads.h,
	plugins/debug-manager/plugin.c,
	plugins/debug-manager/Makefile.am,
	plugins/gdb/plugin.c,
	plugins/gdb/debugger.c,
	plugins/gdb/debugger.h:
	Add a window displaying all threads
	Add needed functions
	Switching to a different thread is still not done

	* plugins/debug-manager/debug_tree.c,
	plugins/debug-manager/locals.c,
	plugins/debug-manager/stack_trace.c:
	Small cosmetic changes

	* plugins/gdb/gdbmi.c:
	Keep all elements in gdbmi hash
	Even if using the same key like in -threads-list-ids

2007-03-11  Naba Kumar  <naba@gnome.org>
